// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the correct addons when provided 1`] = `
.c0 {
  color: #e4e4e4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 25px;
}

.c0 >[role="group"] {
  margin-bottom: 0;
}

.c1 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 18px;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c3 {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c4 {
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0,0,0,0.075);
  -webkit-transition: border-color linear 0.15s,box-shadow linear 0.15s;
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  box-sizing: border-box;
  color: #000;
  font-size: 18px;
  font-face: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: normal;
  height: 2.2em;
  line-height: 1.428;
  min-width: 0;
  padding: 6px 12px;
  width: 100%;
}

.c4.c4 {
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: #787878;
}

.c4::-moz-placeholder {
  color: #787878;
}

.c4:-ms-input-placeholder {
  color: #787878;
}

.c4::placeholder {
  color: #787878;
}

.c4:disabled,
.c4:disabled:-moz-read-only {
  background-color: #ededed;
  cursor: text;
  cursor: not-allowed;
}

.c4:disabled,
.c4:disabled:read-only {
  background-color: #ededed;
  cursor: text;
  cursor: not-allowed;
}

.c2 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0,0,0,0.075);
  -webkit-transition: border-color linear 0.15s,box-shadow linear 0.15s;
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 !important;
}

.c2:focus-within {
  border-color: #83bffc;
  box-shadow: 0 0 8px rgba(102,175,233,0.6),inset 0 0 0 0 rgba(0,0,0,0);
}

.c2.c2:before {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
  font-size: 18px;
  background-color: #e4e4e4;
  color: #5e5e5e;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 0;
  outline: 0;
  padding: 0.333em 0.6111em;
}

.c5 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0,0,0,0.075);
  -webkit-transition: border-color linear 0.15s,box-shadow linear 0.15s;
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  display: table-cell;
  -webkit-appearance: none;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
}

.c5.c5:-moz-read-only {
  background-color: #ededed;
  cursor: text;
}

.c5.c5:read-only {
  background-color: #ededed;
  cursor: text;
}

.c5.c5 {
  border: none !important;
  margin: 0 !important;
}

.c5.c5:focus {
  box-shadow: inset 0 0 0 0 rgba(0,0,0,0);
}

@media (min-width:768px) {
  .c1 {
    margin-right: 20px;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="test"
  >
    Text
  </label>
  <div
    class="c2"
  >
    <div
      aria-hidden="true"
      style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
    >
      <input
        type="hidden"
      />
      <i
        aria-hidden="true"
        class="c3 bds-icon bds-prepend"
      />
      <input
        type="hidden"
      />
      <i
        aria-hidden="true"
        class="c3 bds-icon bds-undefined"
      />
    </div>
    <input
      class="c4 c5"
      id="test"
      type="text"
    />
  </div>
</div>
`;

exports[`renders the correct addons when provided 2`] = `
.c0 {
  color: #e4e4e4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 25px;
}

.c0 >[role="group"] {
  margin-bottom: 0;
}

.c1 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 18px;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c3 {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c4 {
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0,0,0,0.075);
  -webkit-transition: border-color linear 0.15s,box-shadow linear 0.15s;
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  box-sizing: border-box;
  color: #000;
  font-size: 18px;
  font-face: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: normal;
  height: 2.2em;
  line-height: 1.428;
  min-width: 0;
  padding: 6px 12px;
  width: 100%;
}

.c4.c4 {
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: #787878;
}

.c4::-moz-placeholder {
  color: #787878;
}

.c4:-ms-input-placeholder {
  color: #787878;
}

.c4::placeholder {
  color: #787878;
}

.c4:disabled,
.c4:disabled:-moz-read-only {
  background-color: #ededed;
  cursor: text;
  cursor: not-allowed;
}

.c4:disabled,
.c4:disabled:read-only {
  background-color: #ededed;
  cursor: text;
  cursor: not-allowed;
}

.c2 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0,0,0,0.075);
  -webkit-transition: border-color linear 0.15s,box-shadow linear 0.15s;
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 !important;
}

.c2:focus-within {
  border-color: #83bffc;
  box-shadow: 0 0 8px rgba(102,175,233,0.6),inset 0 0 0 0 rgba(0,0,0,0);
}

.c2.c2:after {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
  font-size: 18px;
  background-color: #e4e4e4;
  color: #5e5e5e;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 0;
  outline: 0;
  padding: 0.333em 0.6111em;
}

.c5 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0,0,0,0.075);
  -webkit-transition: border-color linear 0.15s,box-shadow linear 0.15s;
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  display: table-cell;
  -webkit-appearance: none;
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5.c5:-moz-read-only {
  background-color: #ededed;
  cursor: text;
}

.c5.c5:read-only {
  background-color: #ededed;
  cursor: text;
}

.c5.c5 {
  border: none !important;
  margin: 0 !important;
}

.c5.c5:focus {
  box-shadow: inset 0 0 0 0 rgba(0,0,0,0);
}

@media (min-width:768px) {
  .c1 {
    margin-right: 20px;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="test"
  >
    Text
  </label>
  <div
    class="c2"
  >
    <div
      aria-hidden="true"
      style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
    >
      <input
        type="hidden"
      />
      <i
        aria-hidden="true"
        class="c3 bds-icon bds-undefined"
      />
      <input
        type="hidden"
      />
      <i
        aria-hidden="true"
        class="c3 bds-icon bds-append"
      />
    </div>
    <input
      class="c4 c5"
      id="test"
      type="text"
    />
  </div>
</div>
`;

exports[`renders the correct addons when provided 3`] = `
.c0 {
  color: #e4e4e4;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-bottom: 25px;
}

.c0 >[role="group"] {
  margin-bottom: 0;
}

.c1 {
  color: #444;
  cursor: pointer;
  font-family: 'Source Sans Pro','Segoe UI',Segoe,Calibri,Tahoma,sans-serif;
  font-size: 18px;
  font-weight: bold;
  line-height: 1.428;
  margin-bottom: 5px;
  display: inline-block;
}

.c1[disabled] {
  cursor: not-allowed;
}

.c3 {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  font-size: 18px;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
}

.c4 {
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0,0,0,0.075);
  -webkit-transition: border-color linear 0.15s,box-shadow linear 0.15s;
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  box-sizing: border-box;
  color: #000;
  font-size: 18px;
  font-face: "Source Sans Pro","Segoe UI",Segoe,Calibri,Tahoma,sans-serif;
  font-weight: normal;
  height: 2.2em;
  line-height: 1.428;
  min-width: 0;
  padding: 6px 12px;
  width: 100%;
}

.c4.c4 {
  outline: 0;
}

.c4::-webkit-input-placeholder {
  color: #787878;
}

.c4::-moz-placeholder {
  color: #787878;
}

.c4:-ms-input-placeholder {
  color: #787878;
}

.c4::placeholder {
  color: #787878;
}

.c4:disabled,
.c4:disabled:-moz-read-only {
  background-color: #ededed;
  cursor: text;
  cursor: not-allowed;
}

.c4:disabled,
.c4:disabled:read-only {
  background-color: #ededed;
  cursor: text;
  cursor: not-allowed;
}

.c2 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0,0,0,0.075);
  -webkit-transition: border-color linear 0.15s,box-shadow linear 0.15s;
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  border: 1px solid #c5c5c5;
  border-radius: 2px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 !important;
}

.c2:focus-within {
  border-color: #83bffc;
  box-shadow: 0 0 8px rgba(102,175,233,0.6),inset 0 0 0 0 rgba(0,0,0,0);
}

.c2.c2:before {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
  font-size: 18px;
  background-color: #e4e4e4;
  color: #5e5e5e;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 0;
  outline: 0;
  padding: 0.333em 0.6111em;
}

.c2.c2:after {
  font-style: normal;
  font-weight: normal;
  font-variant: normal;
  text-transform: none;
  line-height: 1;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  vertical-align: text-bottom;
  font-size: 18px;
  background-color: #e4e4e4;
  color: #5e5e5e;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  line-height: 1;
  margin: 0;
  outline: 0;
  padding: 0.333em 0.6111em;
}

.c5 {
  background-color: #fff;
  box-shadow: 0 0 0 0 #c5c5c5,inset 0 1px 1px rgba(0,0,0,0.075);
  -webkit-transition: border-color linear 0.15s,box-shadow linear 0.15s;
  transition: border-color linear 0.15s,box-shadow linear 0.15s;
  display: table-cell;
  -webkit-appearance: none;
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-bottom-right-radius: 0;
  border-top-right-radius: 0;
}

.c5.c5:-moz-read-only {
  background-color: #ededed;
  cursor: text;
}

.c5.c5:read-only {
  background-color: #ededed;
  cursor: text;
}

.c5.c5 {
  border: none !important;
  margin: 0 !important;
}

.c5.c5:focus {
  box-shadow: inset 0 0 0 0 rgba(0,0,0,0);
}

@media (min-width:768px) {
  .c1 {
    margin-right: 20px;
  }
}

<div
  class="c0"
>
  <label
    class="c1"
    for="test"
  >
    Text
  </label>
  <div
    class="c2"
  >
    <div
      aria-hidden="true"
      style="position: absolute; visibility: hidden; overflow: visible; width: 0px; height: 0px; left: -5000px;"
    >
      <input
        type="hidden"
      />
      <i
        aria-hidden="true"
        class="c3 bds-icon bds-prepend"
      />
      <input
        type="hidden"
      />
      <i
        aria-hidden="true"
        class="c3 bds-icon bds-append"
      />
    </div>
    <input
      class="c4 c5"
      id="test"
      type="text"
    />
  </div>
</div>
`;
